Attempt to fix double scroll issues

--- a/src/Website/Company.Website/PetRocks/index.razor.css
+++ b/src/Website/Company.Website/PetRocks/index.razor.css
@@ -7,3 +7,7 @@
     width: 100%;
     object-fit: cover
 }
+
+.basket-buttons{
+    padding-bottom: 20px;
+}
